// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > Map State should handle add component to map 1`] = `
Object {
  "activeTrips": Array [],
  "center": Object {
    "lat": 38.8886,
    "lon": -77.043,
  },
  "components": Array [
    "mockComponent",
  ],
  "zoom": 12,
}
`;

exports[`reducers > Map State should handle default state 1`] = `
Object {
  "activeTrips": Array [],
  "center": Object {
    "lat": 38.8886,
    "lon": -77.043,
  },
  "components": Array [],
  "zoom": 12,
}
`;

exports[`reducers > Map State should handle log out 1`] = `
Object {
  "activeTrips": Array [],
  "center": Object {
    "lat": 38.8886,
    "lon": -77.043,
  },
  "components": Array [],
  "zoom": 12,
}
`;

exports[`reducers > Map State should handle remove component from map 1`] = `
Object {
  "components": Array [],
}
`;

exports[`reducers > Map State should handle set active trips 1`] = `
Object {
  "activeTrips": Array [
    1,
    2,
    3,
  ],
  "center": Object {
    "lat": 38.8886,
    "lon": -77.043,
  },
  "components": Array [],
  "zoom": 12,
}
`;

exports[`reducers > Map State should handle set isochrone 1`] = `
Object {
  "activeTrips": Array [],
  "center": Object {
    "lat": 38.8886,
    "lon": -77.043,
  },
  "components": Array [],
  "isochrone": "mockIsochrone",
  "zoom": 12,
}
`;

exports[`reducers > Map State should handle set map center 1`] = `
Object {
  "activeTrips": Array [],
  "center": "mockCenter",
  "components": Array [],
  "zoom": 12,
}
`;

exports[`reducers > Map State should handle set map state 1`] = `
Object {
  "activeTrips": Array [],
  "center": Object {
    "lat": 38.8886,
    "lon": -77.043,
  },
  "components": Array [],
  "zoom": 1234,
}
`;
